<resources>
    <string name="app_name">Java App</string>
    <string name="main"><i>Главная</i></string>
    <string name="basics_bottom"><i>Основы</i></string>
    <string name="oop_bottom"><i>ООП</i></string>
    <string name="collections_bottom"><i>Коллекции</i></string>
    <string name="settings"><i>Настройки</i></string>
    <string name="basics_java"><i>Основы JAVA</i></string>
    <string name="versionNameApp">Java App: versionName "1.0"</string>
    <string name="explanations"><i>Пояснения</i></string>
    <string name="books"><i>Книги</i></string>
    <string name="lessons10_01">Условные конструкции</string>
    <string name="lessons10_02">Одним из фундаментальных элементов многих языков программирования являются <b>условные конструкции</b>. \nДанные конструкции позволяют направить работу программы по одному из путей в зависимости от определенных условий. \n\nВ языке Java используются следующие условные конструкции: \n<b>if..else\nswitch..case</b></string>
    <string name="lessons10_03">Конструкция if/else</string>
    <string name="lessons10_04">Выражение <b>if/else</b> проверяет истинность некоторого условия и в зависимости от результатов проверки выполняет определенный код:</string>
    <string name="lessons10_05">После ключевого слова <b>if</b> ставится условие. \nИ если это условие выполняется, то срабатывает код, который помещен в далее в блоке <b>if</b> после фигурных скобок. \n\nВ качестве условий выступает операция сравнения двух чисел. \n\nТак как, в данном случае первое число больше второго, то выражение <b>num1 > num2</b> истинно и возвращает значение <b>true</b>. \nСледовательно, управление переходит в блок кода после фигурных скобок и начинает выполнять содержащиеся там инструкции, а конкретно метод <b>System.out.println(&#34;Первое число больше второго&#34;);</b>\n\nЕсли бы первое число оказалось бы меньше второго или равно ему, то инструкции в блоке <b>if</b> не выполнялись бы. \nНо что, если мы захотим, чтобы при несоблюдении условия также выполнялись какие-либо действия? \n\nВ этом случае мы можем добавить блок <b>else</b>:</string>
    <string name="lessons10_06">Но при сравнении чисел мы можем насчитать три состояния: первое число больше второго, первое число меньше второго и числа равны. \n\nС помощью выражения <b>else if</b>, мы можем обрабатывать дополнительные условия:</string>
    <string name="lessons10_07">Также мы можем соединить сразу несколько условий, используя логические операторы:</string>
    <string name="lessons10_08">Здесь блок <b>if</b> будет выполняться, если <b>num1 > num2</b> равно <b>true</b> и одновременно <b>num1>7</b> равно <b>true</b></string>
    <string name="lessons10_09">Конструкция switch</string>
    <string name="lessons10_10">Конструкция <b>switch/case</b> аналогична конструкции <b>if/else</b>, так как позволяет обработать сразу несколько условий:</string>
    <string name="lessons10_11">После ключевого слова <b>switch</b> в скобках идет сравниваемое выражение. \n\nЗначение этого выражения последовательно сравнивается со значениями, помещенными после операторов <b>сase</b>. \nИ если совпадение найдено, то будет выполняет соответствующий блок <b>сase</b>. \nВ конце блока <b>сase</b> ставится оператор <b>break</b>, чтобы избежать выполнения других блоков. \n\nНапример, если бы убрали оператор <b>break</b> в следующем случае:</string>
    <string name="lessons10_12">то выполнился бы блок <b>case 8</b>, (поскольку переменная <b>num равна 8</b>). \nНо так как в этом блоке оператор <b>break</b> отсутствует, то начал бы выполняться блок <b>case 9</b>. \n\nЕсли мы хотим также обработать ситуацию, когда совпадения не будет найдено, то можно добавить блок <b>default</b>, как в примере выше. \n\nХотя блок <b>default</b> необязателен. \n\nТакже мы можем определить одно действие сразу для нескольких блоков <b>case</b> подряд:</string>
    <string name="lessons10_13">Тернарная операция</string>
    <string name="lessons10_14">Тернарную операция имеет следующий синтаксис: \n[первый операнд - условие] ? \n[второй операнд] : \n[третий операнд]. \n\nТаким образом, в этой операции участвуют сразу три операнда. \nВ зависимости от условия тернарная операция возвращает второй или третий операнд: если условие равно <b>true</b>, то возвращается второй операнд; если условие равно <b>false</b>, то третий. \n\nНапример:</string>
    <string name="lessons10_15">Здесь результатом тернарной операции является переменная <b>z</b>. \n\nСначала проверяется условие <b>x&#60;y</b>. \nИ если оно соблюдается, то <b>z</b> будет равно второму операнду - \n(x+y), \nиначе <b>z</b> будет равно третьему операнду</string>
    <string name="lessonsOop10_01">Интерфейсы</string>
    <string name="lessonsOop10_02">Механизм наследования очень удобен, но он имеет свои ограничения. \nВ частности мы можем наследовать только от одного класса, в отличие, например, от языка <b>С++</b>, где имеется множественное наследование. \n\nВ языке Java подобную проблему частично позволяют решить интерфейсы. \nИнтерфейсы определяют некоторый функционал, не имеющий конкретной реализации, который затем реализуют классы, применяющие эти интерфейсы. \nИ один класс может применить множество интерфейсов. \n\nЧтобы определить интерфейс, используется ключевое слово <b>interface</b>. \n\nНапример:</string>
    <string name="lessonsOop10_03">Данный интерфейс называется <b>Printable</b>. \nИнтерфейс может определять константы и методы, которые могут иметь, а могут и не иметь реализации. \nМетоды без реализации похожи на абстрактные методы абстрактных классов. Так, в данном случае объявлен один метод, который не имеет реализации. \n\nВсе методы интерфейса не имеют модификаторов доступа, но фактически по умолчанию доступ <b>public</b>, так как цель интерфейса - определение функционала для реализации его классом. \nПоэтому весь функционал должен быть открыт для реализации. \n\nЧтобы класс применил интерфейс, надо использовать ключевое слово <b>implements</b>:</string>
    <string name="lessonsOop10_04">В данном случае класс <b>Book</b> реализует интерфейс <b>Printable</b>. При этом надо учитывать, что если класс применяет интерфейс, то он должен реализовать все методы интерфейса, как в случае выше реализован метод <b>print</b>. \n\nПотом в методе <b>main</b> мы можем создать объект класса <b>Book</b> и вызвать его метод <b>print</b>. \n\nЕсли класс не реализует какие-то методы интерфейса, то такой класс должен быть определен как абстрактный, а его неабстрактные классы-наследники затем должны будут реализовать эти методы.\n\nВ тоже время мы не можем напрямую создавать объекты интерфейсов, поэтому следующий код не будет работать:</string>
    <string name="lessonsOop10_05">Одним из преимуществ использования интерфейсов является то, что они позволяют добавить в приложение гибкости. \n\nНапример, в дополнение к классу <b>Book</b> определим еще один класс, который будет реализовывать интерфейс <b>Printable</b>:</string>
    <string name="lessonsOop10_06">Класс <b>Book</b> и класс <b>Journal</b> связаны тем, что они реализуют интерфейс <b>Printable</b>. \nПоэтому мы динамически в программе можем создавать объекты <b>Printable</b> как экземпляры обоих классов:</string>
    <string name="lessonsOop10_07">Интерфейсы в преобразованиях типов</string>
    <string name="lessonsOop10_08">Все сказанное в отношении преобразования типов характерно и для интерфейсов. \n\nНапример, так как класс <b>Journal</b> реализует интерфейс <b>Printable</b>, то переменная типа <b>Printable</b> может хранить ссылку на объект типа <b>Journal</b>:</string>
    <string name="lessonsOop10_09">И если мы хотим обратиться к методам класса <b>Journal</b>, которые определены не в интерфейсе <b>Printable</b>, а в самом классе <b>Journal</b>, то нам надо явным образом выполнить преобразование типов: \n\n<b>((Journal)p).getName();</b></string>
    <string name="lessonsOop10_10">Методы по умолчанию</string>
    <string name="lessonsOop10_11">Ранее до <b>JDK 8</b> при реализации интерфейса мы должны были обязательно реализовать все его методы в классе. А сам интерфейс мог содержать только определения методов без конкретной реализации. \n\nВ <b>JDK 8</b> была добавлена такая функциональность как методы по умолчанию. \nИ теперь интерфейсы кроме определения методов могут иметь их реализацию по умолчанию, которая используется, если класс, реализующий данный интерфейс, не реализует метод. \n\nНапример, создадим метод по умолчанию в интерфейсе <b>Printable</b>:</string>
    <string name="lessonsOop10_12">Метод по умолчанию - это обычный метод без модификаторов, который помечается ключевым словом <b>default</b>. \n\nЗатем в классе <b>Journal</b> нам необязательно этот метод реализовать, хотя мы можем его и переопределить:</string>
    <string name="lessonsOop10_13">Статические методы</string>
    <string name="lessonsOop10_14">Начиная с <b>JDK 8</b> в интерфейсах доступны статические методы - они аналогичны методам класса:</string>
    <string name="lessonsOop10_15">Чтобы обратиться к статическому методу интерфейса также, как и в случае с классами, пишут название интерфейса и метод:</string>
    <string name="lessonsOop10_16">Приватные методы</string>
    <string name="lessonsOop10_17">По умолчанию все методы в интерфейсе фактически имеют модификатор <b>public</b>. \n\nОднако начиная с <b>Java 9</b> мы также можем определять в интерфейсе методы с модификатором <b>private</b>. \nОни могут быть статическими и нестатическими, но они не могут иметь реализации по умолчанию. \n\nПодобные методы могут использоваться только внутри самого интерфейса, в котором они определены. \nТо есть к примеру нам надо выполнять в интерфейсе некоторые повторяющиеся действия, и в этом случае такие действия можно выделить в приватные методы:</string>
    <string name="lessonsOop10_18">Константы в интерфейсах</string>
    <string name="lessonsOop10_19">Кроме методов в интерфейсах могут быть определены статические константы:</string>
    <string name="lessonsOop10_20">Хотя такие константы также не имеют модификаторов, но по умолчанию они имеют модификатор доступа <b>public static final</b>, и поэтому их значение доступно из любого места программы. \n\nПрименение констант:</string>
    <string name="lessonsOop10_21">Множественная реализация интерфейсов</string>
    <string name="lessonsOop10_22">Если нам надо применить в классе несколько интерфейсов, то они все перечисляются через запятую после слова <b>implements</b>:</string>
    <string name="lessonsOop10_23">Наследование интерфейсов</string>
    <string name="lessonsOop10_24">Интерфейсы, как и классы, могут наследоваться:</string>
    <string name="lessonsOop10_25">При применении этого интерфейса класс <b>Book</b> должен будет реализовать как методы интерфейса <b>BookPrintable</b>, так и методы базового интерфейса <b>Printable</b>.</string>
    <string name="lessonsOop10_26">Вложенные интерфейсы</string>
    <string name="lessonsOop10_27">Как и классы, интерфейсы могут быть вложенными, то есть могут быть определены в классах или других интерфейсах. \n\nНапример:</string>
    <string name="lessonsOop10_28">При применении такого интерфейса нам надо указывать его полное имя вместе с именем класса:</string>
    <string name="lessonsOop10_29">Использование интерфейса будет аналогично предыдущим случаям:</string>
    <string name="lessonsOop10_30">Интерфейсы как параметры и результаты методов</string>
    <string name="lessonsOop10_31">И также как и в случае с классами, интерфейсы могут использоваться в качестве типа параметров метода или в качестве возвращаемого типа:</string>
    <string name="lessonsOop10_32">Метод <b>read()</b> в качестве параметра принимает объект интерфейса <b>Printable</b>, поэтому в этот метод мы можем передать как объект <b>Book</b>, так и объект <b>Journal</b>. \n\nМетод <b>createPrintable()</b> возвращает объект <b>Printable</b>, поэтому также мы можем возвратить как объект <b>Book</b>, так и <b>Journal</b>. \n\nКонсольный вывод:</string>
</resources>