<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/ic_main"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/main"
        />

    <item
        android:id="@+id/ic_basics"
        android:icon="@drawable/ic_basics_bottom"
        android:title="@string/basics_bottom"
        />
    <item
        android:id="@+id/ic_oop"
        android:icon="@drawable/ic_oop_bottom"
        android:title="@string/oop_bottom"
        />
    <item
        android:id="@+id/ic_collections"
        android:icon="@drawable/ic_collections_bottom"
        android:title="@string/collections_bottom"
        />
    <item
        android:id="@+id/ic_other"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"
        />




</menu>