<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lessons_oop.OopTenActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottomBar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:orientation="vertical">

                <TextView
                    style="@style/textViewZagolovok"
                    android:text="@string/lessonsOop10_01" />

                <TextView
                    style="@style/textView"
                    android:text="@string/lessonsOop10_02" />

                <com.zolad.zoominimageview.ZoomInImageView
                    android:id="@+id/lessOop10_image01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/textView"
                    android:text="@string/lessonsOop10_03" />


                <com.zolad.zoominimageview.ZoomInImageView
                    android:id="@+id/lessOop10_image02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/textView"
                    android:text="@string/lessonsOop10_04" />

                <com.zolad.zoominimageview.ZoomInImageView
                    android:id="@+id/lessOop10_image03"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/textView"
                    android:text="@string/lessonsOop10_05" />

                <com.zolad.zoominimageview.ZoomInImageView
                    android:id="@+id/lessOop10_image04"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/textView"
                    android:text="@string/lessonsOop10_06" />

                <com.zolad.zoominimageview.ZoomInImageView
                    android:id="@+id/lessOop10_image05"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/textViewZagolovok"
                    android:text="@string/lessonsOop10_07" />

                <TextView
                    style="@style/textView"
                    android:text="@string/lessonsOop10_08" />

                <com.zolad.zoominimageview.ZoomInImageView
                    android:id="@+id/lessOop10_image06"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/textView"
                    android:layout_marginBottom="15sp"
                    android:text="@string/lessonsOop10_09" />

                <TextView
                    style="@style/textViewZagolovok"
                    android:text="@string/lessonsOop10_10" />

                <TextView
                    style="@style/textView"
                    android:text="@string/lessonsOop10_11" />

                <com.zolad.zoominimageview.ZoomInImageView
                    android:id="@+id/lessOop10_image07"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/textView"
                    android:text="@string/lessonsOop10_12" />

                <com.zolad.zoominimageview.ZoomInImageView
                    android:id="@+id/lessOop10_image08"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/textViewZagolovok"
                    android:text="@string/lessonsOop10_13" />

                <TextView
                    style="@style/textView"
                    android:text="@string/lessonsOop10_14" />

                <com.zolad.zoominimageview.ZoomInImageView
                    android:id="@+id/lessOop10_image09"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/textView"
                    android:text="@string/lessonsOop10_15" />

                <com.zolad.zoominimageview.ZoomInImageView
                    android:id="@+id/lessOop10_image10"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/textViewZagolovok"
                    android:text="@string/lessonsOop10_16" />

                <TextView
                    style="@style/textView"
                    android:text="@string/lessonsOop10_17" />

                <com.zolad.zoominimageview.ZoomInImageView
                    android:id="@+id/lessOop10_image11"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/textViewZagolovok"
                    android:text="@string/lessonsOop10_18" />

                <TextView
                    style="@style/textView"
                    android:text="@string/lessonsOop10_19" />

                <com.zolad.zoominimageview.ZoomInImageView
                    android:id="@+id/lessOop10_image12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/textView"
                    android:text="@string/lessonsOop10_20" />

                <com.zolad.zoominimageview.ZoomInImageView
                    android:id="@+id/lessOop10_image13"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/textViewZagolovok"
                    android:text="@string/lessonsOop10_21" />

                <TextView
                    style="@style/textView"
                    android:text="@string/lessonsOop10_22" />

                <com.zolad.zoominimageview.ZoomInImageView
                    android:id="@+id/lessOop10_image14"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/textViewZagolovok"
                    android:text="@string/lessonsOop10_23" />

                <TextView
                    style="@style/textView"
                    android:text="@string/lessonsOop10_24" />

                <com.zolad.zoominimageview.ZoomInImageView
                    android:id="@+id/lessOop10_image15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/textView"
                    android:text="@string/lessonsOop10_25" />

                <TextView
                    style="@style/textViewZagolovok"
                    android:text="@string/lessonsOop10_26" />

                <TextView
                    style="@style/textView"
                    android:text="@string/lessonsOop10_27" />

                <com.zolad.zoominimageview.ZoomInImageView
                    android:id="@+id/lessOop10_image16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/textView"
                    android:text="@string/lessonsOop10_28" />

                <com.zolad.zoominimageview.ZoomInImageView
                    android:id="@+id/lessOop10_image17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/textView"
                    android:text="@string/lessonsOop10_29" />

                <com.zolad.zoominimageview.ZoomInImageView
                    android:id="@+id/lessOop10_image18"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/textViewZagolovok"
                    android:text="@string/lessonsOop10_30" />

                <TextView
                    style="@style/textView"
                    android:text="@string/lessonsOop10_31" />

                <com.zolad.zoominimageview.ZoomInImageView
                    android:id="@+id/lessOop10_image19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/textView"
                    android:text="@string/lessonsOop10_32" />

                <com.zolad.zoominimageview.ZoomInImageView
                    android:id="@+id/lessOop10_image20"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="3">


                    <Button style="@style/button_style_previous" />
                    <Button style="@style/button_style_lessons" />
                    <Button style="@style/button_style_next"/>

                </LinearLayout>

                <TextView
                    style="@style/textViewVersionName"
                    android:text="@string/versionNameApp" />

            </LinearLayout>


        </ScrollView>

        <RelativeLayout
            android:id="@+id/bottomBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNavView_Bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/white_grey_border_top"
                app:menu="@menu/bottom_navigation_menu">


            </com.google.android.material.bottomnavigation.BottomNavigationView>
        </RelativeLayout>





    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>