<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lessons_java.LessonsTenActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottomBar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:orientation="vertical">



                <TextView
                    style="@style/textViewZagolovok"
                    android:text="@string/lessons10_01" />


                <TextView
                    style="@style/textView"
                    android:text="@string/lessons10_02" />

                <TextView
                    style="@style/textViewZagolovok"
                    android:text="@string/lessons10_03" />

                <TextView
                    style="@style/textView"
                    android:text="@string/lessons10_04" />

                <com.zolad.zoominimageview.ZoomInImageView
                    android:id="@+id/less10_image01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/textView"
                    android:text="@string/lessons10_05" />

                <com.zolad.zoominimageview.ZoomInImageView
                    android:id="@+id/less10_image02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/textView"
                    android:text="@string/lessons10_06" />

                <com.zolad.zoominimageview.ZoomInImageView
                    android:id="@+id/less10_image03"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/textView"
                    android:text="@string/lessons10_07" />

                <com.zolad.zoominimageview.ZoomInImageView
                    android:id="@+id/less10_image04"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/textView"
                    android:text="@string/lessons10_08" />

                <TextView
                    style="@style/textViewZagolovok"
                    android:text="@string/lessons10_09" />

                <TextView
                    style="@style/textView"
                    android:text="@string/lessons10_10" />

                <com.zolad.zoominimageview.ZoomInImageView
                    android:id="@+id/less10_image05"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/textView"
                    android:text="@string/lessons10_11" />

                <com.zolad.zoominimageview.ZoomInImageView
                    android:id="@+id/less10_image06"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/textView"
                    android:text="@string/lessons10_12" />

                <com.zolad.zoominimageview.ZoomInImageView
                    android:id="@+id/less10_image07"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/textViewZagolovok"
                    android:text="@string/lessons10_13" />

                <TextView
                    style="@style/textView"
                    android:text="@string/lessons10_14" />

                <com.zolad.zoominimageview.ZoomInImageView
                    android:id="@+id/less10_image08"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/textView"
                    android:layout_marginBottom="20dp"
                    android:text="@string/lessons10_15" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="3">


                    <Button style="@style/button_style_previous" />
                    <Button style="@style/button_style_lessons" />
                    <Button style="@style/button_style_next"/>

                </LinearLayout>

                <TextView
                    style="@style/textViewVersionName"
                    android:text="@string/versionNameApp" />

            </LinearLayout>


        </ScrollView>

        <RelativeLayout
            android:id="@+id/bottomBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNavView_Bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/white_grey_border_top"
                app:menu="@menu/bottom_navigation_menu">


            </com.google.android.material.bottomnavigation.BottomNavigationView>
        </RelativeLayout>





    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>